--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: 'Asia/Shanghai'
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://127.0.0.1/lin
 root: /lin/
-permalink: :year/:month/:title/:hash
+permalink: :year/:month/:title/:hash.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
