--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,15 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-next-master
 
+symbols_count_time:
+  #文章内是否显示
+  symbols: true
+  time: true
+  # 网页底部是否显示
+  total_symbols: true
+  total_time: true
+
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
