--- a/themes/hexo-theme-next-master/_config.yml
+++ b/themes/hexo-theme-next-master/_config.yml
@@ -515,7 +515,7 @@ math:
 
 # Easily enable fast Ajax navigation on your website.
 # Dependencies: https://github.com/theme-next/theme-next-pjax
-pjax: true
+pjax: false
 
 # FancyBox is a tool that offers a nice and elegant way to add zooming functionality for images.
 # For more information: https://fancyapps.com/fancybox
