2021_05_如何解决-github-访问慢的问题

--- a/themes/hexo-theme-next-master/_config.yml
+++ b/themes/hexo-theme-next-master/_config.yml
@@ -179,7 +179,7 @@ site_state: true
 # Key is the link label showing to end users.
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
-  #GitHub: https://github.com/yourname || fab fa-github
+  GitHub: https://github.com/kawayiLinLin || fab fa-github
   E-Mail: mailto:1936635053@qq.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
