更新掘金链接

--- a/themes/hexo-theme-next-master/_config.yml
+++ b/themes/hexo-theme-next-master/_config.yml
@@ -181,7 +181,7 @@ site_state: true
 social:
   GitHub: https://github.com/kawayiLinLin || fab fa-github
   E-Mail: mailto:1936635053@qq.com || fa fa-envelope
-  掘金: https://juejin.cn/user/712139267651623 || juejinlogo.svg
+  掘金: https://juejin.cn/user/712139267651623 || /images/juejinlogo.svg
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
   #Twitter: https://twitter.com/yourname || fab fa-twitter
