--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://127.0.0.1/lin
+url: https://yzl.xyz/lin
 root: /lin/
 permalink: :year/:month/:title/:hash.html
 permalink_defaults:
